[package]
name = "jrozalski_paper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
reqwest = "0.11.11"
rss = "2.0.1"
scraper = "0.13.0"
rand = "0.8.5"
image = "0.24.2"
